--- a/app/src/main/res/layout/activity_read_speed.xml
+++ b/app/src/main/res/layout/activity_read_speed.xml
@@ -6,7 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context="jp.eq_inc.android_testaccessspeed.MainActivity">
+    tools:context="jp.eq_inc.android_testaccessspeed.ReadWriteSpeedActivity">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -31,7 +31,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:inputType="number"
-                android:text="1"
+                android:text="10"
                 android:hint="input calculate average count"/>
 
         </LinearLayout>
@@ -43,6 +43,16 @@
             android:layout_weight="0.0"
             android:text="test"/>
     </LinearLayout>
+
+    <View
+        android:layout_width="1dp"
+        android:layout_height="8dp" />
+
+    <android.support.v7.widget.SwitchCompat
+        android:id="@+id/scOutputLog"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="output log"/>
 
     <View
         android:layout_width="1dp"
@@ -188,6 +198,141 @@
 
             <TextView
                 android:id="@+id/tvDoubleClStackVariable"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"/>
+
+            <TextView
+                android:id="@+id/tvStringFinalStaticConstant"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"/>
+
+            <TextView
+                android:id="@+id/tvStringFinalInstanceConstant"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"/>
+
+            <TextView
+                android:id="@+id/tvStringFinalStackConstant"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"/>
+
+            <TextView
+                android:id="@+id/tvIntFinalStaticConstant"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"/>
+
+            <TextView
+                android:id="@+id/tvIntFinalInstanceConstant"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"/>
+
+            <TextView
+                android:id="@+id/tvIntFinalStackConstant"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"/>
+
+            <TextView
+                android:id="@+id/tvLongFinalStaticConstant"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"/>
+
+            <TextView
+                android:id="@+id/tvLongFinalInstanceConstant"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"/>
+
+            <TextView
+                android:id="@+id/tvLongFinalStackConstant"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"/>
+
+            <TextView
+                android:id="@+id/tvFloatFinalStaticConstant"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"/>
+
+            <TextView
+                android:id="@+id/tvFloatFinalInstanceConstant"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"/>
+
+            <TextView
+                android:id="@+id/tvFloatFinalStackConstant"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"/>
+
+            <TextView
+                android:id="@+id/tvDoubleFinalStaticConstant"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"/>
+
+            <TextView
+                android:id="@+id/tvDoubleFinalInstanceConstant"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"/>
+
+            <TextView
+                android:id="@+id/tvDoubleFinalStackConstant"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"/>
+
+            <TextView
+                android:id="@+id/tvIntClFinalStaticConstant"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"/>
+
+            <TextView
+                android:id="@+id/tvIntClFinalInstanceConstant"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"/>
+
+            <TextView
+                android:id="@+id/tvIntClFinalStackConstant"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"/>
+
+            <TextView
+                android:id="@+id/tvLongClFinalStaticConstant"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"/>
+
+            <TextView
+                android:id="@+id/tvLongClFinalInstanceConstant"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"/>
+
+            <TextView
+                android:id="@+id/tvLongClFinalStackConstant"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"/>
+
+            <TextView
+                android:id="@+id/tvFloatClFinalStaticConstant"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"/>
+
+            <TextView
+                android:id="@+id/tvFloatClFinalInstanceConstant"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"/>
+
+            <TextView
+                android:id="@+id/tvFloatClFinalStackConstant"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"/>
+
+            <TextView
+                android:id="@+id/tvDoubleClFinalStaticConstant"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"/>
+
+            <TextView
+                android:id="@+id/tvDoubleClFinalInstanceConstant"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"/>
+
+            <TextView
+                android:id="@+id/tvDoubleClFinalStackConstant"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"/>
 
